sandbox/output
GildedRose.java:15: error: cannot find symbol
    public static Predicate<Item> isNormalItem(Item item) {
                  ^
  symbol:   class Predicate
  location: class GildedRose
GildedRoseTest.java:35: error: cannot find symbol
            .filter(GildedRose.isNormalItem(item))
                                            ^
  symbol:   variable item
  location: class GildedRoseTest
2 errors
